# stencilProbe

./: .gitignore  CMakeLists.txt  README.md  eval.h  jacobi3d_cuda.cu  jacobi3d_cuda_vanilla.cu  jacobi3d_cuda_wavefront.cu  jacobi3d_cuda_wavefrontunrolled.cu  jacobi3d_openmp_avx.cpp  jacobi3d_openmp_vanilla.cpp  jacobi3d_openmpavx.cpp  jacobi3d_serial_vanilla.cpp  jacobi3d_vanilla.cpp
